WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
REOPENED
301008
DOM timers installed during a microtask checkpoint should not inherit DOM timer nesting level from the task scope.
https://bugs.webkit.org/show_bug.cgi?id=301008
Summary
DOM timers installed during a microtask checkpoint should not inherit DOM tim...
Ryan Reno
Reported
2025-10-17 14:40:15 PDT
After executing a DOM timer we will perform a microtask checkpoint. If we install a DOM timer during the microtask execution that timer should not inherit the nesting level from the timer that just ran.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-10-17 14:40:22 PDT
<
rdar://problem/162893146
>
Ryan Reno
Comment 2
2025-10-17 14:50:50 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/52582
Ryan Reno
Comment 3
2025-10-22 12:22:04 PDT
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/55601
EWS
Comment 4
2025-10-22 16:36:17 PDT
Committed
301979@main
(85dc29aff870): <
https://commits.webkit.org/301979@main
> Reviewed commits have been landed. Closing PR #52582 and removing active labels.
Ryan Reno
Comment 5
2025-12-12 14:29:35 PST
Reopened Bugzilla. AutoFill fails to fill password field on iclouod.com, tracking revert in
https://bugs.webkit.org/show_bug.cgi?id=304089
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug