Source/WebCore/dom/EventLoop.cpp
@@ -260,6 +260,7 @@ void EventLoop::queueMicrotask(JSC::QueuedTask&& microtask)
 
 void EventLoop::performMicrotaskCheckpoint()
 {
+    MicrotaskCheckpointScope microtaskCheckpointScope(*this);
     microtaskQueue().performMicrotaskCheckpoint();
 }
 
